Thu Feb 11 09:49:31 2010  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: fix [ruby-core:28144] reported by Hans de Graaff.
	  (Resolv::DNS#make_requester): pass nameserver_port to
	  UnconnectedUDP.new.
	  (Resolv::DNS.bind_random_port): change the is_ipv6 argument to
	  bind_host.
	  (Resolv::DNS::Requester#initialize): change instance variable to
	  store multiple sockets.
	  (Resolv::DNS::Requester#request): pass readable sockets to
	  recv_reply.
	  (Resolv::DNS::Requester#close): close all sockets.
	  (Resolv::DNS::Requester::UnconnectedUDP#initialize): allocate
	  a socket for each address family of name servers.
	  (Resolv::DNS::Requester::UnconnectedUDP#recv_reply): read from the
	  passwd readable socket.
	  (Resolv::DNS::Requester::UnconnectedUDP#sender): use appropriate
	  socket for the target nameserver.
	  (Resolv::DNS::Requester::ConnectedUDP): follow the instance variable
	  change.
	  (Resolv::DNS::Requester::TCP#sender): ditto.
	  (Resolv::DNS::Config#nameserver_port): new method.

Thu Feb 11 09:37:01 2010  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: support :nameserver_port option.  backport r26230
	  and r26357 from 1.9.
	
Wed Feb 10 13:03:29 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_times): backport r15514 to reduce loop
	  overhead.

Sun Feb  7 04:02:08 2010  Akinori MUSHA  <knu@iDaemons.org>

	* parse.y: Get rid of tags for Ripper, pointless in 1.8.

Sat Feb  6 02:06:01 2010  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_array.rb (TestArray#test_splat): Add test cases
	  where splat fails in when clause.  ref [Bug #2468]

Sat Feb  6 00:02:31 2010  Tanaka Akira  <akr@fsij.org>

	* random.c (fill_random_seed): don't use O_NOFOLLOW because
	  /dev/urandom is a symlink in OpenSolaris.

	* lib/securerandom.rb (SecureRandom.random_bytes): ditto.

Fri Feb  5 23:09:01 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/rational/rational.c: Added to provide a fast implementation