@@ -1,3 +1,8 @@
+Thu Feb 11 20:43:00 2010  Tanaka Akira  <akr@fsij.org>
+
+	* io.c (rb_io_modenum_mode): return "r" for O_RDONLY|O_APPEND.
+	  [ruby-dev:40379]
+
 Thu Feb 11 09:49:31 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/resolv.rb: fix [ruby-core:28144] reported by Hans de Graaff.
